changed title and fixed fonts on iphone

--- a/source/stylesheets/_queries.scss
+++ b/source/stylesheets/_queries.scss
@@ -11,11 +11,11 @@
             letter-spacing: 1px;
         }
         .cta, .list-item{
-            font-size: 20px;
+            font-size: 15px;
             letter-spacing: 1px;
         }  
         .instructions, .rules{
-            font-size: 19px;
+            font-size: 14px;
             letter-spacing: 1px;
         }
     }
